idea/testData/multiModuleHighlighting/hierarchicalExpectActualMatching/incompleteActualization/jvmAndJs/jvmAndJs.kt
package foo

expect class <!NO_ACTUAL_FOR_EXPECT("class 'ExpectInMiddleActualInJsOnly'", " in module jvm for JVM", "")!>ExpectInMiddleActualInJsOnly<!>
expect class <!NO_ACTUAL_FOR_EXPECT("class 'ExpectInMiddleActualInJvmOnly'", " in module js for JS", "")!>ExpectInMiddleActualInJvmOnly<!>